--- a/templates/estimator.html
+++ b/templates/estimator.html
@@ -38,17 +38,17 @@
         <a href="#"><img src="{{url_for('static', filename='images/houses_3.jpg')}}" alt="" width="571" height="398"></a>
       </div>
       <ul class="pagination">
-        <li> <a href="#" rel="0"> <img src="{{url_for('static', filename='images/f_houses1.png')}}" alt=""> <span class="left"> Silver Brook<br />
+        <li> <a href="#" rel="0"> <img src="{{url_for('static', filename='images/f_houses1.png')}}" alt=""> <span class="left"><b>Silver Brook</b><br />
           Family-friendly,<br />
            <p style="color:orange"> High-Demand </p></span> <span class="right"> <br />
           Accessibility<br />
           </span> </a> </li>
-        <li> <a href="#" rel="1"> <img src="{{url_for('static', filename='images/f_houses2.png')}}" alt=""> <span class="left"> El Montero<br />
+        <li> <a href="#" rel="1"> <img src="{{url_for('static', filename='images/f_houses2.png')}}" alt=""> <span class="left"> <b>El Montero</b><br />
           Outdoorsy,<br />
           Cultural Hub </span> <span class="right"> <br />
           Historical<br />
           </span> </a> </li>
-        <li> <a href="#" rel="2"> <img src="{{url_for('static', filename='images/f_houses3.png')}}" alt=""> <span class="left"> Everton Beach<br />
+        <li> <a href="#" rel="2"> <img src="{{url_for('static', filename='images/f_houses3.png')}}" alt=""> <span class="left"> <b>Everton Beach</b><br />
           Nightlife,<br />
           <p style="color:orange"> High-Demand </p></span> <span class="right"><br />
           Art Hub<br />
@@ -66,50 +66,52 @@
             <div class="box">
               <h2>Home Value Estimator</h2>
               <p>Our trusted tool to help you estimate the cost of an existing or future home in of our lovely neighborhoods</p>
-              <div style="float:left;"> <label for="area"><b>Area</b></label> <input id="area" type="text" value="" name="area"> </div>
-              <div style="float:left;"> <label for="bedrooms"><b>Bedrooms</b></label> <input id="bedrooms" type="text" value="" name="bedrooms"> </div>
+              <form action="#" method="POST">
+                <div style="float:left;"> <label for="area"><b>Area</b></label> <input id="area" type="text" value="" name="area"> </div>
+                <div style="float:left;"> <label for="bedrooms"><b>Bedrooms</b></label> <input id="bedrooms" type="text" value="" name="bedrooms"> </div>
+                <br style="clear:both;" />
+                <div style="float:left;"> <label for="bathrooms"><b>Bathrooms</b></label> <input id="bathrooms" type="text" value="" name="bathrooms"> </div>
+                <div style="float:left;"> <label for="stories"><b>Stories</b></label> <input id="stories" type="text" value="" name="stories"> </div>
+                <br style="clear:both;" />
+                <div class="radio-group"> <label><b>Mainroad Access:</b></label>
+                  <label class="radio" for="mainroad_yes"><input id="mainroad_yes" type="radio" value="1" name="mainroad">Yes</label>
+                  <label class="radio" for="mainroad_no"><input id="mainroad_no" type="radio" value="0" name="mainroad">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Guestroom:</b></label>
+                  <input class="radio" id="guestroom_yes" type="radio" value="1" name="guestroom"><label for="guestroom_yes">Yes</label>
+                  <input class="radio" id="guestroom_no" type="radio" value="0" name="guestroom"><label for="guestroom_no">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Basement:</b></label>
+                  <input class="radio" id="basement_yes" type="radio" value="1" name="basement"><label for="basement_yes">Yes</label>
+                  <input class="radio" id="basement_no" type="radio" value="0" name="basement"><label for="basement_no">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Hotwater Heating:</b></label>
+                  <input class="radio" id="hotwater_yes" type="radio" value="1" name="hotwater"><label for="hotwater_yes">Yes</label>
+                  <input class="radio" id="hotwater_no" type="radio" value="0" name="hotwater"><label for="hotwater_no">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Airconditioning:</b></label>
+                  <input class="radio" id="aircon_yes" type="radio" value="1" name="aircon"><label for="aircon_yes">Yes</label>
+                  <input class="radio" id="aircon_no" type="radio" value="0" name="aircon"><label for="aircon_no">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Parking Spots:</b></label>
+                  <input class="radio" id="parking_0" type="radio" value="0" name="parking"><label for="parking_0">0</label>
+                  <input class="radio" id="parking_1" type="radio" value="1" name="parking"><label for="parking_1">1</label>
+                  <input class="radio" id="parking_2" type="radio" value="2" name="parking"><label for="parking_2">2</label>
+                  <input class="radio" id="parking_3" type="radio" value="3" name="parking"><label for="parking_3">3</label>
+                </div>
+                <div class="radio-group"> <label><b>High-Demand Neighborhood:</b></label>
+                  <input class="radio" id="highdemand_yes" type="radio" value="1" name="highdemand"><label for="highdemand_yes">Yes</label>
+                  <input class="radio" id="highdemand_no" type="radio" value="0" name="highdemand"><label for="highdemand_no">No</label>
+                </div>
+                <div class="radio-group"> <label><b>Furnishing Status:</b></label>
+                  <input class="radio" id="furnishing_full" type="radio" value="0" name="furnishing"><label for="furnishing_full">Fully-Furnished</label>
+                  <input class="radio" id="furnishing_semi" type="radio" value="1" name="furnishing"><label for="furnishing_semi">Semi-Furnished</label>
+                  <input class="radio" id="furnishing_none" type="radio" value="2" name="furnishing"><label for="furnishing_none">Unfurnished</label>
+                </div>
+                <br /> <input type="submit" class="button" value="Calculate">
+                </form>
               <br style="clear:both;" />
-              <div style="float:left;"> <label for="bathrooms"><b>Bathrooms</b></label> <input id="bathrooms" type="text" value="" name="bathrooms"> </div>
-              <div style="float:left;"> <label for="stories"><b>Stories</b></label> <input id="stories" type="text" value="" name="stories"> </div>
-              <br style="clear:both;" />
-              <div class="radio-group"> <label><b>Mainroad Access:</b></label>
-                <label class="radio" for="mainroad_yes"><input id="mainroad_yes" type="radio" value="" name="mainroad">Yes</label>
-                <label class="radio" for="mainroad_no"><input id="mainroad_no" type="radio" value="" name="mainroad">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Guestroom:</b></label>
-                <input class="radio" id="guestroom_yes" type="radio" value="" name="guestroom"><label for="guestroom_yes">Yes</label>
-                <input class="radio" id="guestroom_no" type="radio" value="" name="guestroom"><label for="guestroom_no">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Basement:</b></label>
-                <input class="radio" id="basement_yes" type="radio" value="" name="basement"><label for="basement_yes">Yes</label>
-                <input class="radio" id="basement_no" type="radio" value="" name="basement"><label for="basement_no">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Hotwater Heating:</b></label>
-                <input class="radio" id="hotwater_yes" type="radio" value="" name="hotwater"><label for="hotwater_yes">Yes</label>
-                <input class="radio" id="hotwater_no" type="radio" value="" name="hotwater"><label for="hotwater_no">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Airconditioning:</b></label>
-                <input class="radio" id="aircon_yes" type="radio" value="" name="aircon"><label for="aircon_yes">Yes</label>
-                <input class="radio" id="aircon_no" type="radio" value="" name="aircon"><label for="aircon_no">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Parking Spots:</b></label>
-                <input class="radio" id="parking_0" type="radio" value="" name="parking"><label for="parking_0">0</label>
-                <input class="radio" id="parking_1" type="radio" value="" name="parking"><label for="parking_1">1</label>
-                <input class="radio" id="parking_2" type="radio" value="" name="parking"><label for="parking_2">2</label>
-                <input class="radio" id="parking_3" type="radio" value="" name="parking"><label for="parking_3">3</label>
-              </div>
-              <div class="radio-group"> <label><b>High-Demand Neighborhood:</b></label>
-                <input class="radio" id="highdemand_yes" type="radio" value="" name="highdemand"><label for="highdemand_yes">Yes</label>
-                <input class="radio" id="highdemand_no" type="radio" value="" name="highdemand"><label for="highdemand_no">No</label>
-              </div>
-              <div class="radio-group"> <label><b>Furnishing Status:</b></label>
-                <input class="radio" id="furnishing_full" type="radio" value="" name="furnishing"><label for="furnishing_full">Fully-Furnished</label>
-                <input class="radio" id="furnishing_semi" type="radio" value="" name="furnishing"><label for="furnishing_semi">Semi-Furnished</label>
-                <input class="radio" id="furnishing_none" type="radio" value="" name="furnishing"><label for="furnishing_none">Unfurnished</label>
-              </div>
-              <br /> <a href="#" class="button">Calculate</a>
-              <br style="clear:both;" />
-              <input type="text" id="estimate" name="estimate" value="" readonly>
+              <input type="text" id="estimate" name="estimate" value="{{estimated_value}}" readonly>
             </div>
           </div>
         </article>
