--- a/static/css/style.css
+++ b/static/css/style.css
@@ -501,3 +501,17 @@ input[type=radio],
       clear: none;
       margin: 0 5px 0 5px;
     }
+
+.estimation {
+     display: table;
+     width: 100%;
+}
+
+.currency{
+    font-size: 16px;
+    padding-right: 5px;
+    color: black;
+    display: table-cell;
+    width: 1px;
+    white-space: nowrap;
+}
