Refactored and removed unneccesary assets

--- a/templates/estimator.html
+++ b/templates/estimator.html
@@ -65,7 +65,7 @@
           <div class="wrapper">
             <div class="box">
               <h2>Home Value Estimator</h2>
-              <p>Our trusted tool to help you estimate the cost of an existing or future home in of our lovely neighborhoods</p>
+              <p>Our trusted tool to help you estimate the cost of an existing or future home in one of our neighborhoods</p>
               <form action="#" method="POST">
                 <div style="float:left;"> <label for="area"><b>Area</b></label> <input id="area" type="number" value="" name="area"> </div>
                 <div style="float:left;"> <label for="bedrooms"><b>Bedrooms</b></label> <input id="bedrooms" type="number" value="" name="bedrooms"> </div>
